--- a/gradle/sweet-dependency/sweet-dependency-config.yaml
+++ b/gradle/sweet-dependency/sweet-dependency-config.yaml
@@ -45,15 +45,15 @@ libraries:
   androidx.core:
     core-ktx:
       version: 1.16.0
-  androidx.appcompat:
-    appcompat:
-      version: 1.7.0
-  com.google.android.material:
-    material:
-      version: 1.12.0
-  androidx.constraintlayout:
-    constraintlayout:
-      version: 2.2.1
+#  androidx.appcompat:
+#    appcompat:
+#      version: 1.7.0
+#  com.google.android.material:
+#    material:
+#      version: 1.12.0
+#  androidx.constraintlayout:
+#    constraintlayout:
+#      version: 2.2.1
   androidx.test.ext:
     junit:
       version: 1.2.1
