--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:allowAudioPlaybackCapture="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -44,17 +44,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
-<!--        <activity-alias-->
-<!--            android:name=".XposedHome"-->
-<!--            android:exported="true"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:windowSoftInputMode="adjustResize"-->
-<!--            android:targetActivity=".MainActivity">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="de.robv.android.xposed.category.MODULE_SETTINGS" />-->
-<!--            </intent-filter>-->
-<!--        </activity-alias>-->
-
     </application>
 </manifest>
